// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfflineMessage renders with an action button 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#104e01",
      "borderColor": "#fff59b",
      "borderRadius": 11.25,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "top": undefined,
      "zIndex": 2,
    }
  }
>
  <View
    accessibilityRole="button"
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "opacity": 1,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2.5}
      style={
        Object {
          "color": "#fff59b",
          "fontSize": 30.595932917809698,
          "paddingHorizontal": 15,
          "paddingVertical": 13.34,
          "textAlign": "center",
        }
      }
    >
      Sorry, you can't do that right now, you appear to be offline
    </Text>
    <Icon
      name="forwardburger"
      size={66.7}
      style={
        Object {
          "color": "#fff59b",
          "marginRight": 15,
        }
      }
    />
  </View>
</View>
`;

exports[`OfflineMessage renders without an action button 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#104e01",
      "borderColor": "#fff59b",
      "borderRadius": 11.25,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "top": undefined,
      "zIndex": 2,
    }
  }
>
  <Text
    maxFontSizeMultiplier={2.5}
    style={
      Object {
        "color": "#fff59b",
        "fontSize": 30.595932917809698,
        "paddingHorizontal": 15,
        "paddingVertical": 13.34,
        "textAlign": "center",
      }
    }
  >
    Sorry, you can't do that right now, you appear to be offline
  </Text>
</View>
`;
